@@ -4700,7 +4700,7 @@ regardless of currency or denomination.</p>
 function which allows you to make
 comparisons based on numerous characteristics of the target. The target
 may be any code, including mobs or items. The variable may be any of
-those listed above under MPGSET in the section on Scriptable Commands.
+those listed above under MPGSET in the section on Scriptable Commands, as well as some special codes, such as BASESTRENGTH, BASEDAMAGE, etc..&nbsp;.
 The '==' may be any of the above logical operators, and the value any
 expression, including codes.</p>
 <p>EXAMPLES:</p>
